feat: add file upload component structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,5 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+body {
+  margin: 0 !important;
 }
 
 * {
@@ -16,8 +8,15 @@
   margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.shadow {
+  box-shadow: 5px 5px 5px 0px lightgray;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
